--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hacker_news_clone",
   "version": "0.1.0",
   "private": true,
-	"homepage": "http://clivemchd.github.io/hacker_news_clone",
+	"homepage": "https://hackernewsclone.clivemac.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
